fix contrast issues

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ html, body {
     font-family: 'IM Fell DW Pica', serif;
     text-align: center;
     font-size: 14px;
-    color: #f2f1ef;
+    color: #fefefe;
     line-height: 1.5;
     width: 100%;
     margin: 0px;
@@ -65,7 +65,7 @@ h1 {
 
 a {
     text-decoration: none;
-    color: #382903;
+    color: #360000;
 }
 
 a:hover {
@@ -78,7 +78,7 @@ a:hover {
     height: 100vh;
     object-fit: cover;
     background-repeat: no-repeat;
-    background-color: #444;
+    background-color: #ccc;
     background-position: center top;
     color: #444;
 }
@@ -109,7 +109,7 @@ img {
     font-family: 'Nunito', sans-serif;
     padding-top: 1em;
     background-color: #838c91;
-    color: #f2f1ef;
+    color: #002627;
     display: flex;
     flex-direction: column-reverse;
 }
